# QtXunwei

./: .gitignore  README.md
01_first_demo/: CMakeLists.txt  main  main.cpp
02_simple_qt_demo/: CMakeLists.txt  logindialog.cpp  logindialog.h  logindialog.ui  logindialog.ui.autosave  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  userinfo.cpp  userinfo.h
03_serial_port_assistant/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
